# ship-berthing-rl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  generate_demo_figures.py  generate_trajectory_figures.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/results/baselines/: ppo_evaluation.json  (+4 more)
docs/: findings.md  module-map.md  paper-requirements.md  progress.md  project-spec.md  quick-delivery-plan.md  technical-guide.md
scripts/: analyze_failure_modes.py  collect_baseline_trajectories.py  collect_sac_trajectories.py  collect_sac_trajectories_vectorized.py  collect_trajectories.py  eval_baselines_sb3.py  eval_sac_gym.py  generate_animations.py  generate_architecture_diagram.py  generate_enhanced_animations.py  generate_multi_trajectory_overlay.py  generate_network_diagram.py  plot_advanced_trajectory_overlay.py  plot_baseline_comparison.py  plot_baseline_comparison_paper.py  plot_disturbance_timeseries.py  plot_performance_radar.py  plot_statistical_comparison.py  plot_trajectory_comparison.py  plot_trajectory_comparison_v2.py  plot_velocity_heading.py  train_baselines_sb3.py  visualize_trajectories_detailed.py
src/baselines/: __init__.py  config.py  metrics.py  wrappers.py
src/envs/: ship_berthing_env.py  vectorized_env.py
src/physics/: otter.py  otter_torch.py
src/train/: train.py  train_vectorized.py
src/utils/: disturbance_forces.py  disturbance_metrics.py  generate_path.py  per_buffer.py
(+7 files in other folders)
