[project]
name = "ship-berthing"
version = "1.0.0"
description = "Otter USV Ship Berthing with PER-SAC"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "gym>=0.26.2",
    "torch>=2.0.0",
    "pytest>=7.0.0",
    "stable-baselines3>=2.8.0",
    "markupsafe>=2.1.0",
    "shimmy>=2.0.0",
]

[tool.uv]
# 使用 extra-index-url 对 torch 相关包使用 CUDA 索引
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
index-strategy = "first-index"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
markupsafe = { index = "pypi" }
